added rake task

--- a/rakefile
+++ b/rakefile
@@ -3,9 +3,12 @@ require './lib/models'
 require 'dm-migrations'
 
 desc "Recreate database from DataMapper model"
-task :restore do
+task :reset do
   DataMapper.finalize.auto_migrate!   
 end
 task :migrate do
   DataMapper.finalize.auto_upgrade!   
+end
+task :reset_games do
+  Game.all.destroy!
 end
