--- a/rakefile
+++ b/rakefile
@@ -3,15 +3,15 @@ require './lib/models'
 require 'dm-migrations'
 
 desc "Recreate database from DataMapper model"
-task :reset do
+task :rebuild do
   DataMapper.finalize.auto_migrate!   
-  puts "Database reset completed"
+  puts "Database rebuilt!"
 end
 task :migrate do
   DataMapper.finalize.auto_upgrade!   
-  puts "Upgrade completed"
+  puts "Upgrade complete!"
 end
 task :reset_games do
   Game.all.destroy!
-  puts "Game index has been reset"
+  puts "Game index has been reset!"
 end
