--- a/rakefile
+++ b/rakefile
@@ -1,5 +1,6 @@
 require 'sinatra/base'
 require 'data_mapper'
+require 'sinatra/flash'
 require './config/general'
 require './config/environment'
 require './lib/models'
